# managesf

./: MANIFEST.in  README.md  groups  managesf.service  managesf.spec  project.config  requirements.txt  run_tests.sh  setup.cfg  setup.py  tox.ini
docs/: generate-resources-docs.py
docs/man/: sfmanager.1
docs/source/: conf.py  restapi.rst  sfmanager.rst
etc/: sf-policy.json  sf-policy.yaml
managesf/: cli.py  policy.py
managesf/controllers/: SFuser.py  backup.py  gerrit.py  htp.py  localuser.py  pages.py  root.py
managesf/model/: __init__.py  yamlbackend.py
managesf/model/yamlbkd/: .TODO  .engine.py.swo  engine.py  operations.py  project.py  resource.py  yamlbackend.py
managesf/model/yamlbkd/resources/: dummy.py  gitacls.py  gitrepository.py  group.py  project.py  storyboard.py
managesf/policies/: __init__.py  base.py  htpasswd.py  membership.py
managesf/services/: base.py  exceptions.py
managesf/services/gerrit/: __init__.py  group.py  membership.py  project.py  replication.py  repository.py  review.py  role.py  user.py  utils.py
managesf/services/jenkins/: __init__.py  job.py
managesf/services/nodepool/: __init__.py  common.py  image.py  node.py
managesf/services/redmine/: __init__.py  backup.py  group.py  hooks.py  membership.py  project.py  role.py  user.py
managesf/services/storyboard/: __init__.py  hooks.py  user.py
managesf/tests/: __init__.py  resources_test_utils.py  test_SFuser.py  test_app.py  test_backup.py  test_cli.py  test_gerrit.py  test_htpassword.py  test_localuser.py  test_policy.py  test_resources_engine.py  test_resources_engine_real.py  test_resources_gitrepo.py  test_resources_group.py  test_resources_model.py  test_resources_model_real.py  test_service.py  test_service_gerrit.py  test_service_jenkins.py  test_service_nodepool.py  test_service_redmine.py  test_service_storyboard.py  test_utils.py  test_yamlbackend.py
