[metadata]
name = managesf
summary = Software Factory REST API
description-file = README.md

[files]
packages =
    managesf
data_files =
    etc/managesf = etc/*

[entry_points]
managesf.service =
    SFGerrit = managesf.services.gerrit:SoftwareFactoryGerrit
    SFRedmine = managesf.services.redmine:SoftwareFactoryRedmine
    SFStoryboard = managesf.services.storyboard:SoftwareFactoryStoryboard
    jenkins = managesf.services.jenkins:Jenkins
    nodepool = managesf.services.nodepool:Nodepool
    etherpad = managesf.services.etherpad:Etherpad
    lodgeit = managesf.services.lodgeit:Lodgeit
oslo.policy.policies =
    managesf = managesf.policies:list_rules
