#!/usr/bin/env python
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations
# under the License.

[metadata]
name = managesf
version = 1.0.0
summary = Software Factory REST API
description-file = README.md

[files]
packages =
    managesf
data_files =
    etc/managesf = etc/*

[entry_points]
managesf.service =
    SFGerrit = managesf.services.gerrit:SoftwareFactoryGerrit
    SFRedmine = managesf.services.redmine:SoftwareFactoryRedmine
    SFStoryboard = managesf.services.storyboard:SoftwareFactoryStoryboard
    jenkins = managesf.services.jenkins:Jenkins
    nodepool = managesf.services.nodepool:Nodepool
    etherpad = managesf.services.etherpad:Etherpad
    lodgeit = managesf.services.lodgeit:Lodgeit
oslo.policy.policies =
    managesf = managesf.policies:list_rules

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
